Trial and error

--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title> Bussmall Survey</title>
-  <h1>Bussmall Survey</h1>
-</head>
-<main>
+  <head>
+    <title>Bussmall Survey</title>
+  </head>
   <body>
-    <p>
-    </p>
+    <header>
+      <h1>Busmall Survey</h1>
+    </header>
+    <body>
+<form name="productNames.displayImages">
+<table border=3>
+    <main>
+      <section class = "productNames">
+  <img id="displayImages" src="img/app.js" alt="FaceBook">
+</section>
+        </h3>
+      </aside>
+    </main>
+    <footer>
+    <script src="app.js"> </script>
+    </footer>
   </body>
-</main>
-<footer>
-</footer>
 </html>
