--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <table border=3>
     <main>
       <section class = "productNames">
-  <img id="displayImages" src="img/app.js" alt="FaceBook">
+  <class id="getNum" src="img/app.js" alt="getNum.jpg">
 </section>
         </h3>
       </aside>
