slite edits and corrections

--- a/index.html
+++ b/index.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Bussmall Survey</title>
-  </head>
+<head>
+  <title>Bussmall Survey</title>
+</head>
+<body>
+  <header>
+    <h1>Busmall Survey</h1>
+  </header>
   <body>
-    <header>
-      <h1>Busmall Survey</h1>
-    </header>
-    <body>
-<form name="productNames.displayImages">
-<table border=3>
-    <main>
-      <section class = "productNames">
-  <class id="getNum" src="img/app.js" alt="getNum.jpg">
-</section>
+      <main>
+        <section class = "productNames">
+          <div id="getNum"> </div>
+          </section>
         </h3>
       </aside>
     </main>
     <footer>
-    <script src="app.js"> </script>
+      <script src="app.js"> </script>
     </footer>
   </body>
-</html>
+  </html>
