hard code image for inspiration

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   </header>
   <body>
       <main>
+        <img src='bag.jpg'> </img>
+        <img src='banana.jpg'></img>
+        <img src='bathroom.jpg'></img>
         <section class = "productNames">
           <div id="getNum"> </div>
           </section>
