NEW CODE I WANT TO TEST TOMORROW

--- a/index.html
+++ b/index.html
@@ -23,3 +23,11 @@
     </footer>
   </body>
   </html>
+
+
+  <!--  NEW CODE I WANT TO TEST TOMORROW! for(var i=1;i<=10;i++){
+      imgGen.generateImage(800, 600, 80, function(err, image) {
+          console.log("Generating image #" +i);
+          fs.writeFileSync('dummy-' + i + '.jpg', image.data);
+      });
+  } -->
