scotts lecture notes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   </header>
   <body>
       <main>
+        <section id="imageOne"> </section>
+          <section id="imageTwo"> </section>
+            <section id="imageThree"></section>
+            
+          <!-- scotts work above-->
         <img src='bag.jpg'> </img>
         <img src='banana.jpg'></img>
         <img src='bathroom.jpg'></img>
