--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Bussmall Survey</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
@@ -9,22 +10,23 @@
   </header>
   <body>
       <main>
-        <section id="imageOne"> </section>
-          <section id="imageTwo"> </section>
-            <section id="imageThree"></section>
-            
+        <p>
+        <section id="images" width="100" height="200">
+          <section id="results"> </section>
           <!-- scotts work above-->
-        <img src='bag.jpg'> </img>
+        <!-- <img src='bag.jpg'> </img>
         <img src='banana.jpg'></img>
         <img src='bathroom.jpg'></img>
         <section class = "productNames">
           <div id="getNum"> </div>
-          </section>
+          </section> -->
+        </p>
         </h3>
       </aside>
     </main>
     <footer>
       <script src="app.js"> </script>
+      <script src="charts.js"></script>
     </footer>
   </body>
   </html>
