--- a/index.html
+++ b/index.html
@@ -9,32 +9,25 @@
     <h1>Busmall Survey</h1>
   </header>
   <body>
-      <main>
-        <p>
-        <section id="images" width="100" height="200">
-          <section id="results"> </section>
-          <!-- scotts work above-->
-        <!-- <img src='bag.jpg'> </img>
-        <img src='banana.jpg'></img>
-        <img src='bathroom.jpg'></img>
-        <section class = "productNames">
-          <div id="getNum"> </div>
-          </section> -->
-        </p>
-        </h3>
-      </aside>
+    <main>
+      <p>
+        <section id="images" width="100" height="200"></section>
+        <section id="results"> </section>
+      </p>
+      <canvas id="myChart" width="400" height="400"></canvas>
     </main>
     <footer>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
       <script src="app.js"> </script>
       <script src="charts.js"></script>
     </footer>
   </body>
-  </html>
+</html>
 
 
-  <!--  NEW CODE I WANT TO TEST TOMORROW! for(var i=1;i<=10;i++){
-      imgGen.generateImage(800, 600, 80, function(err, image) {
-          console.log("Generating image #" +i);
-          fs.writeFileSync('dummy-' + i + '.jpg', image.data);
-      });
-  } -->
+<!--  NEW CODE I WANT TO TEST TOMORROW! for(var i=1;i<=10;i++){
+imgGen.generateImage(800, 600, 80, function(err, image) {
+console.log("Generating image #" +i);
+fs.writeFileSync('dummy-' + i + '.jpg', image.data);
+});
+} -->
