--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <main>
       <p>
-        <section id="images" width="100" height="200"></section>
+        <section id="images" width="100px" height="200px"></section>
         <section id="results"> </section>
       </p>
       <canvas id="myChart" width="400" height="400"></canvas>
