--- a/index.html
+++ b/index.html
@@ -1,33 +1,25 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Bussmall Survey</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <header>
-    <h1>Busmall Survey</h1>
-  </header>
+  <head>
+    <title>Bussmall Survey</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
   <body>
-    <main>
-      <p>
-        <section id="images" width="100px" height="200px"></section>
-        <section id="results"> </section>
-      </p>
-      <canvas id="myChart" width="400" height="400"></canvas>
-    </main>
-    <footer>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
-      <script src="app.js"> </script>
-      <script src="charts.js"></script>
-    </footer>
-  </body>
-</html>
-
-
-<!--  NEW CODE I WANT TO TEST TOMORROW! for(var i=1;i<=10;i++){
-imgGen.generateImage(800, 600, 80, function(err, image) {
-console.log("Generating image #" +i);
-fs.writeFileSync('dummy-' + i + '.jpg', image.data);
-});
-} -->
+    <header>
+      <h1>Busmall Survey</h1>
+    </header>
+      <main>
+        <p>
+          As founder of the company, I want to rebuild my Busmall around the communities request. I want to customize my stocks, based on what the consumers waant and need. I would be delighted if you could take the time to comlete my inventory survey and help build a mall custom to your requests. When you are finished, you will have the chance to win one of these products as a personal thanks from me to you. Thank you!
+          <section id="images" width="100px" height="200px"></section>
+          <section id="results"> </section>
+        </p>
+        <canvas id="myChart" width="400" height="400"></canvas>
+      </main>
+      <footer>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
+        <script src="app.js"> </script>
+        <script src="charts.js"></script>
+      </footer>
+    </body>
+  </html>
